# fast-api-docker-example

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
